only server dockrize

--- a/back_end/compose.yaml
+++ b/back_end/compose.yaml
@@ -1,31 +1,17 @@
 version: '3.8'
 services:
-  web:
-    depends_on:
-      - server
-    build: ./front_end
-    ports:
-     - 5173:5173
-    develop:
-      watch: 
-        - path: ./front_end/package*.json
-          action: rebuild
-        - path: ./front_end
-          target: ./usr/src/app
-          action: sync
-
   server:
     depends_on:
       - postgres
-    build: ./back_end
+    build: ./
     ports:
       - 3000:3000
     develop:
       watch:
-      - path: ./back_end
+      - path: ./
         target: ./usr/src/app
         action: sync
-      - path: ./back_end/package*.json
+      - path: ./package*.json
         action: rebuild
     networks:
        channel_connnect:
